--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -1,7 +1,7 @@
 {
     "domain": "volkswagencarnet",
     "name": "Volkswagen WeConnect",
-    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet",
+    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet/blob/master/README.md",
     "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
     "dependencies": [],
     "codeowners": ["@robinostlund"],
