--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,45 +1,22 @@
-name: Upload Release Asset
+name: Publish New Tag
 
 on:
   push:
-    # Sequence of patterns matched against refs/tags
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    branches:
+      - master
 
 jobs:
   build:
-    name: Upload Release Asset
+    name: Publish New Tag
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-      - name: Build project # This would actually build your project, using zip for an example artifact
-        run: |
-          cd custom_components/volkswagencarnet
-          zip volkswagencarnet.zip -r ./
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.23.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this release:
-            - ..
-          draft: true
-          prerelease: true
-
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./custom_components/volkswagencarnet/volkswagencarnet.zip
-          asset_name: volkswagencarnet.zip
-          asset_content_type: application/zip
+          WITH_V: true
