--- a/.github/workflows/validate_hacs.yaml
+++ b/.github/workflows/validate_hacs.yaml
@@ -2,11 +2,13 @@ name: Validate with HACS
 
 on:
   push:
+  #pull_request:
   schedule:
     - cron: "0 0 * * *"
 
 jobs:
   validate:
+    name: Validate with HACS
     runs-on: "ubuntu-latest"
     steps:
       - uses: "actions/checkout@v2"
