--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,4 +19,5 @@ jobs:
         uses: anothrNick/github-tag-action@1.23.0
         env:
           GITHUB_TOKEN: ${{ secrets.MY_PERSONAL_ACCESS_TOKEN }}
+          DEFAULT_BUMP: patch
           WITH_V: true
