--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,12 @@ jobs:
           cd custom_components/volkswagencarnet
           zip volkswagencarnet.zip -r ./
 
+      - name: Create Changelog
+        uses: scottbrenner/generate-changelog-action@master
+        id: changelog
+        env:
+          REPO: ${{ github.repository }}
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -31,7 +37,7 @@ jobs:
           release_name: Release ${{ github.ref }}
           body: |
             Changes in this release:
-            - ..
+            ${{ steps.changelog.outputs.changelog }}
           draft: true
           prerelease: true
 
