--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,11 +64,11 @@ jobs:
             ## What’s Changed
 
             $CHANGES
-          categories:
-            - title: "🚀 Features"
-              label: "feature"
-            - title: "🐛 Bug Fixes"
-              label: "fix"
+          # categories:
+          #   - title: "🚀 Features"
+          #     label: "feature"
+          #   - title: "🐛 Bug Fixes"
+          #     label: "fix"
 
       - name: Upload Release Asset
         id: upload-release-asset 
