--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   validate:
-    name: Validate
+    name: Cron Validate
     runs-on: "ubuntu-latest"
     steps:
       - name: Check out repository
