updates to github workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,13 +10,14 @@ on:
 
 jobs:
   build:
-    name: Upload Release Asset
+    #name: Upload Release Asset
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        # with:
-        #   fetch-depth: 0
+        with:
+          fetch-depth: 0
 
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
