--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,10 +2,10 @@ name: Release
 
 on:
   push:
-    # tags:
-    #   - 'v*'
-    branches:
-      - master
+    tags:
+      - 'v*'
+    # branches:
+    #   - master
 
 
 jobs:
@@ -19,25 +19,34 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Build project # This would actually build your project, using zip for an example artifact
-        run: |
-          cd custom_components/volkswagencarnet
-          zip volkswagencarnet.zip -r ./
-
       - name: Create Release
         id: create_release
         uses: release-drafter/release-drafter@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # - name: Upload Release Asset
+      #   id: upload-release-asset 
+      #   uses: actions/upload-release-asset@v1.0.2
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     release_id: ${{ steps.create_release.outputs.id }}
+      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: ./custom_components/volkswagencarnet/volkswagencarnet.zip
+      #     asset_name: volkswagencarnet.zip
+      #     asset_content_type: application/zip
+
       - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cd custom_components/volkswagencarnet
+          zip volkswagencarnet.zip -r ./
+
+      - name: Upload zip to release
+        uses: svenstaro/upload-release-action@v1-release
         with:
-          release_id: ${{ steps.create_release.outputs.id }}
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./custom_components/volkswagencarnet/volkswagencarnet.zip
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./custom_components/volkswagencarnet/volkswagencarnet.zip
           asset_name: volkswagencarnet.zip
-          asset_content_type: application/zip
+          tag: ${{ github.ref }}
+          overwrite: true
