--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,9 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-    # branches:
-    #   - master
-
 
 jobs:
   build:
@@ -25,6 +22,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # - name: Create Release Asset
+      #   run: |
+      #     cd custom_components/volkswagencarnet
+      #     zip volkswagencarnet.zip -r ./
+
       # - name: Upload Release Asset
       #   id: upload-release-asset 
       #   uses: actions/upload-release-asset@v1.0.2
@@ -37,16 +39,4 @@ jobs:
       #     asset_name: volkswagencarnet.zip
       #     asset_content_type: application/zip
 
-      - name: Upload Release Asset
-        run: |
-          cd custom_components/volkswagencarnet
-          zip volkswagencarnet.zip -r ./
 
-      - name: Upload zip to release
-        uses: svenstaro/upload-release-action@v1-release
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./custom_components/volkswagencarnet/volkswagencarnet.zip
-          asset_name: volkswagencarnet.zip
-          tag: ${{ github.ref }}
-          overwrite: true
