--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     #name: Upload Release Asset
-    name: Release
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
