--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,12 @@
 name: Release
 
-# on:
-#   push:
-#     tags:
-#       - 'v*'
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
   build:
-    #name: Upload Release Asset
-    name: Create Release
+    name: Upload Assets
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -20,27 +14,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Create Release
-        id: create_release
-        uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create zip
+        run: |
+          cd custom_components/volkswagencarnet
+          zip volkswagencarnet.zip -r ./
 
-      # - name: Create Release Asset
-      #   run: |
-      #     cd custom_components/volkswagencarnet
-      #     zip volkswagencarnet.zip -r ./
+      - name: Upload zip to release
+        uses: svenstaro/upload-release-action@v1-release
 
-      # - name: Upload Release Asset
-      #   id: upload-release-asset 
-      #   uses: actions/upload-release-asset@v1.0.2
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     release_id: ${{ steps.create_release.outputs.id }}
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-      #     asset_path: ./custom_components/volkswagencarnet/volkswagencarnet.zip
-      #     asset_name: volkswagencarnet.zip
-      #     asset_content_type: application/zip
-
-
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./custom_components/volkswagencarnet/volkswagencarnet.zip
+          asset_name: volkswagencarnet.zip
+          tag: ${{ github.ref }}
+          overwrite: true
