updates to readme

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -1,12 +1,18 @@
 name: Validate
 
+# on:
+#   pull_request:
+#     branches:
+#       - master
+#   push:
+#     branches:
+#       - master
+
 on:
-  pull_request:
-    branches:
-      - master
   push:
-    branches:
-      - master
+  pull_request:
+  schedule:
+    - cron: "0 0 * * *"
 
 jobs:
   validate:
