--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,22 +1,22 @@
-name: "Cron actions 16:30 every 3 days"
+# name: "Cron actions 16:30 every 3 days"
 
-on:
-  schedule:
-    - cron: '30 16 */3 * *'
+# on:
+#   schedule:
+#     - cron: '30 16 */3 * *'
 
-jobs:
-  validate:
-    name: Cron Validate
-    runs-on: "ubuntu-latest"
-    steps:
-      - name: Check out repository
-        uses: "actions/checkout@v2"
+# jobs:
+#   validate:
+#     name: Cron Validate
+#     runs-on: "ubuntu-latest"
+#     steps:
+#       - name: Check out repository
+#         uses: "actions/checkout@v2"
 
-      - name: HACS validation
-        uses: "hacs/integration/action@master"
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CATEGORY: "integration"
+#       - name: HACS validation
+#         uses: "hacs/integration/action@master"
+#         with:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           CATEGORY: "integration"
 
-      - name: Hassfest validation
-        uses: home-assistant/actions/hassfest@master
+#       - name: Hassfest validation
+#         uses: home-assistant/actions/hassfest@master
