--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -6,5 +6,6 @@
     "dependencies": [],
     "config_flow": true,
     "codeowners": ["@robinostlund"],
-    "requirements": ["volkswagencarnet==4.4.24"]
+    "requirements": ["volkswagencarnet==4.4.24"],
+    "version": "v4.5.0-alpha"
 }
