--- a/.github/workflows/combined.yaml
+++ b/.github/workflows/combined.yaml
@@ -5,25 +5,29 @@ on:
   schedule:
     - cron: '0 0 * * *'
 jobs:
-  ci:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
         name: Download repo
         with:
           fetch-depth: 0
+
       - uses: actions/setup-python@v2
         name: Setup Python
+
       - uses: actions/cache@v2
         name: Cache
         with:
           path: |
             ~/.cache/pip
           key: custom-component-ci
+
       - uses: hacs/action@main
         with:
           # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CATEGORY: integration
+
       - uses: KTibow/ha-blueprint@stable
         name: CI
         with:
