updating validate workflow

--- a/.github/workflows/combined.yaml
+++ b/.github/workflows/combined.yaml
@@ -1,11 +1,14 @@
 name: "Validation And Formatting"
+
 on:
   push:
   pull_request:
   schedule:
     - cron: '0 0 * * *'
+
 jobs:
   validate:
+    name: Validate
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
