updating validate workflow

--- a/.github/workflows/combined.yaml
+++ b/.github/workflows/combined.yaml
@@ -31,7 +31,9 @@ jobs:
           # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CATEGORY: integration
 
-      - uses: KTibow/ha-blueprint@stable
-        name: CI
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: home-assistant/actions/hassfest@master
+
+      # - uses: KTibow/ha-blueprint@stable
+      #   name: CI
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
