--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,18 +1,22 @@
 name-template: 'v$RESOLVED_VERSION 🌈'
 tag-template: 'v$RESOLVED_VERSION'
+change-template: '- #$NUMBER $TITLE @$AUTHOR'
+sort-direction: ascending
 categories:
   - title: '🚀 Features'
     labels:
       - 'feature'
       - 'enhancement'
+
   - title: '🐛 Bug Fixes'
     labels:
       - 'fix'
       - 'bugfix'
       - 'bug'
+
   - title: '🧰 Maintenance'
     label: 'chore'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+
 version-resolver:
   major:
     labels:
@@ -25,6 +29,7 @@ version-resolver:
       - 'patch'
   default: patch
 template: |
+  [![Downloads for this release](https://img.shields.io/github/downloads/robinostlund/homeassistant-volkswagencarnet/$RESOLVED_VERSION/total.svg)](https://github.com/robinostlund/homeassistant-volkswagencarnet/releases/$RESOLVED_VERSION)
   ## Changes
 
   $CHANGES
