--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -2,7 +2,11 @@ name: "Validate"
 
 on:
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
   # push:
   #   branches:
   #     - main
