updates to release-drafter.yml

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -34,5 +34,5 @@ template: |
 
   $CHANGES
 
-  ## Big thanks to
+  ## Thank you so much for helping out to keep this integration awesome
   $CONTRIBUTORS  
