updates to release-drafter.yml

--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -25,4 +25,4 @@ jobs:
         uses: hacs/action@main
         with:
           category: integration
-          comment: True
+          comment: False
