--- a/.github/workflows/labels.yaml
+++ b/.github/workflows/labels.yaml
@@ -1,18 +1,18 @@
-# name: "Labels"
+name: "Labels"
 
-# on:
-#   pull_request_target:
-#    types: [opened, labeled, unlabeled, synchronize]
+on:
+  pull_request_target:
+   types: [opened, labeled, unlabeled, synchronize]
 
-# jobs:
-#   validate-labels:
-#     name: Validate labels
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Verify PR labels
-#         uses: jesusvasquez333/verify-pr-label-action@v1.3.1
-#         with:
-#           github-token: '${{ secrets.GITHUB_TOKEN }}'
-#           valid-labels: 'bug, enhancement'
-#           invalid-labels: 'help wanted, invalid, question'
-#           pull-request-number: '${{ github.event.pull_request.number }}'
+jobs:
+  validate-labels:
+    name: With PR Label action
+    runs-on: ubuntu-latest
+    steps:
+      - name: PR Label Validation
+        uses: jesusvasquez333/verify-pr-label-action@v1.3.1
+        with:
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
+          valid-labels: 'bug, enhancement'
+          invalid-labels: 'help wanted, invalid, question'
+          pull-request-number: '${{ github.event.pull_request.number }}'
