--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -7,5 +7,5 @@
     "config_flow": true,
     "codeowners": ["@robinostlund"],
     "requirements": ["volkswagencarnet==4.4.24"],
-    "version": "v4.5.0-alpha"
+    "version": "thiswillbeautosetonnewrelease"
 }
