--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -34,5 +34,5 @@ template: |
 
   $CHANGES
 
-  ## Thank you so much for helping out to keep this integration awesome
+  ##⭐️ Thank you so much for helping out to keep this integration awesome
   $CONTRIBUTORS  
