--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -9,4 +9,5 @@
     "codeowners": ["@robinostlund"],
     "requirements": ["volkswagencarnet==4.4.34"],
     "version": "v0.0.0"
+    "iot_class": "cloud_polling"
 }
