updating dependabot settings

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,7 +15,8 @@ categories:
       - 'bug'
 
   - title: '🧰 Maintenance'
-    label: 'chore'
+    label:
+      - 'dependencies'
 
 version-resolver:
   major:
