--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -6,7 +6,7 @@
     "dependencies": [],
     "config_flow": true,
     "codeowners": ["@robinostlund"],
-    "requirements": ["volkswagencarnet==4.4.37"],
+    "requirements": [""],
     "version": "v0.0.0",
     "iot_class": "cloud_polling"
 }
