--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,10 +17,7 @@ jobs:
         id: version
         uses: home-assistant/actions/helpers/version@master
 
-      - name: "Set version number"
-        # run: |
-        #   sed -i '/INTEGRATION_VERSION = /c\INTEGRATION_VERSION = "${{ steps.version.outputs.version }}"' ${{ github.workspace }}/custom_components/volkswagencarnet/const.py
-        #   python3 ${{ github.workspace }}/manage/update_manifest.py --version ${{ steps.version.outputs.version }}
+      - name: "Update manifest.json"
         run: |
           python3 ${{ github.workspace }}/manage/update_manifest.py --version ${{ steps.version.outputs.version }}
 
