--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -16,6 +16,10 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
+      - name: "Update manifest.json"
+        run: |
+          python3 ${{ github.workspace }}/manage/update_manifest.py
+
       - name: Hassfest validation
         uses: home-assistant/actions/hassfest@master
 
@@ -25,6 +29,10 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
+
+      - name: "Update manifest.json"
+        run: |
+          python3 ${{ github.workspace }}/manage/update_manifest.py
 
       - name: HACS Validation
         uses: hacs/action@main
