--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,8 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+      time: "06:00"
+      timezone: "Europe/Stockholm"
     labels:
       - "dependencies"
 
@@ -11,5 +13,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      time: "04:00"
+      timezone: "Europe/Stockholm"
     labels:
       - "dependencies"
