--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,12 +19,13 @@ repos:
     rev: '22.1.0'
     hooks:
       - id: black
-        args: [ '--check', '--diff', '--color', '--line-length=120', '.']
+        args: [ '--check', '--diff', '--color', '--line-length=120', '.' ]
 
   - repo: https://github.com/pycqa/flake8
     rev: '4.0.1'
     hooks:
       - id: flake8
+        args: [ '--max-line-length', '120' ]
         additional_dependencies: [ flake8-docstrings ]
 
   - repo: https://github.com/asottile/pyupgrade
