--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     rev: '22.1.0'
     hooks:
       - id: black
-        args: [ '--check', '--diff', '--color', '--line-length=120', '.' ]
+        args: [ '--target-version', 'py39', '--line-length=120', '.' ]
 
   - repo: https://github.com/pycqa/flake8
     rev: '4.0.1'
