Fix typo in service value example

--- a/custom_components/volkswagencarnet/services.yaml
+++ b/custom_components/volkswagencarnet/services.yaml
@@ -140,7 +140,7 @@ update_profile:
             - '10'
     profile_name:
       name: Name
-      eample: Garage at night
+      example: Garage at night
       required: false
       selector:
         text:
