Update descriptions for services

--- a/custom_components/volkswagencarnet/services.yaml
+++ b/custom_components/volkswagencarnet/services.yaml
@@ -168,6 +168,7 @@ update_profile:
             - '10'
     profile_name:
       name: Name
+      description: A descriptive name
       example: Garage at night
       required: false
       selector:
