--- a/custom_components/volkswagencarnet/services.yaml
+++ b/custom_components/volkswagencarnet/services.yaml
@@ -23,6 +23,8 @@ set_charger_max_current:
             - '13'
             - '16'
             - '32'
+            - 'reduced'
+            - 'max'
 
 set_timer_basic_settings:
   name: Set the basic departure timer settings
@@ -62,16 +64,16 @@ set_timer_basic_settings:
           max: 87
           step: 0.5
           unit_of_measurement: "C/F"
-    heater_source:
-      name: Heater source
-      description: Select heater source (only if auxiliary heater is installed)
-      example: 'electric'
-      required: false
-      selector:
-        select:
-          options:
-            - 'electric'
-            - 'auxiliary'
+#    heater_source:
+#      name: Heater source
+#      description: Select heater source (only if auxiliary heater is installed)
+#      example: 'electric'
+#      required: false
+#      selector:
+#        select:
+#          options:
+#            - 'electric'
+#            - 'auxiliary'
 
 update_schedule:
   name: Update departure schedule
@@ -248,13 +250,13 @@ update_profile:
             - '80'
             - '90'
             - '100'
-    heater_source:
-      name: Heater source
-      description: Select heater source (only if auxiliary heater is installed)
-      example: 'electric'
-      required: false
-      selector:
-        select:
-          options:
-            - 'electric'
-            - 'auxiliary'
+#    heater_source:
+#      name: Heater source
+#      description: Select heater source (only if auxiliary heater is installed)
+#      example: 'electric'
+#      required: false
+#      selector:
+#        select:
+#          options:
+#            - 'electric'
+#            - 'auxiliary'
