--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -6,7 +6,7 @@
     "dependencies": [],
     "config_flow": true,
     "codeowners": ["@robinostlund"],
-    "requirements": [],
+    "requirements": ["pytz", "volkswagencarnet==4.4.57"],
     "version": "v0.0.0",
     "iot_class": "cloud_polling"
 }
