--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -1,12 +1,14 @@
 {
+    "codeowners": [
+        "@robinostlund"
+    ],
+    "config_flow": true,
+    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet/blob/master/README.md",
+    "dependencies": [],
     "domain": "volkswagencarnet",
     "name": "Volkswagen WeConnect",
-    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet/blob/master/README.md",
+    "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
-    "dependencies": [],
-    "config_flow": true,
-    "codeowners": ["@robinostlund"],
     "requirements": [],
-    "version": "v0.0.0",
-    "iot_class": "cloud_polling"
+    "version": "v0.0.0"
 }
