--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -1,12 +1,16 @@
 {
     "domain": "volkswagencarnet",
     "name": "Volkswagen WeConnect",
+    "after_dependencies": [
+        "http"
+    ],
     "codeowners": [
         "@robinostlund"
     ],
     "config_flow": true,
     "dependencies": [],
     "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet/blob/master/README.md",
+    "integration_type": "hub",
     "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
     "requirements": [],
