--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -5,7 +5,7 @@
     "codeowners": ["@robinostlund"],
     "config_flow": true,
     "dependencies": [],
-    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet/blob/master/README.md",
+    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet",
     "integration_type": "hub",
     "iot_class": "cloud_polling",
     "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
