--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -8,6 +8,7 @@
     "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet",
     "integration_type": "hub",
     "iot_class": "cloud_polling",
+    "import_executor": "true",
     "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
     "requirements": [],
     "version": "v0.0.0"
