--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -1,15 +1,15 @@
 {
-    "domain": "volkswagencarnet",
-    "name": "Volkswagen WeConnect",
-    "after_dependencies": ["http"],
-    "codeowners": ["@robinostlund"],
-    "config_flow": true,
-    "dependencies": [],
-    "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet",
-    "import_executor": true,
-    "integration_type": "hub",
-    "iot_class": "cloud_polling",
-    "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
-    "requirements": [],
-    "version": "v0.0.0"
+  "domain": "volkswagencarnet",
+  "name": "Volkswagen Connect",
+  "after_dependencies": ["http"],
+  "codeowners": ["@robinostlund"],
+  "config_flow": true,
+  "dependencies": [],
+  "documentation": "https://github.com/robinostlund/homeassistant-volkswagencarnet",
+  "import_executor": true,
+  "integration_type": "hub",
+  "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
+  "requirements": [],
+  "version": "v0.0.0"
 }
