--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -9,26 +9,17 @@ on:
       - master
 
 jobs:
-  validate-black:
-    name: With black
+  validate-ruff:
+    name: With Ruff
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v5
+      - name: Check ruff
+        uses: chartboost/ruff-action@v1
         with:
-          python-version: "3.10"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install black
-
-      - name: Check lint
-        run: |
-          black --check --diff --color --line-length=120 .
+          args: 'format --diff'
 
   validate-hassfest:
     name: With hassfest
