--- a/.github/workflows/close_inactive_issues.yml
+++ b/.github/workflows/close_inactive_issues.yml
@@ -20,4 +20,6 @@ jobs:
           close-issue-message: "This issue was closed because it has been inactive for 14 days since being marked as stale."
           days-before-pr-stale: -1
           days-before-pr-close: -1
+          exempt-all-milestones: true
+          exempt-issue-labels: 'acknowledged'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
