--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -10,6 +10,6 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
-  "requirements": [],
+  "requirements": ["volkswagencarnet==5.2.0"],
   "version": "v0.0.0"
 }
