Fix climate entity naming and sync debug logging with library
Climate Entity Fixes:
- Add _attr_has_entity_name = True to properly prefix entity names with vehicle name

Logging Improvements:
- Add "loggers": ["volkswagencarnet"] to manifest.json for automatic debug enablement
- Enable debug logging for volkswagencarnet library when integration debug is enabled

Remove outdated information from README

--- a/custom_components/volkswagencarnet/manifest.json
+++ b/custom_components/volkswagencarnet/manifest.json
@@ -10,6 +10,7 @@
   "integration_type": "hub",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/robinostlund/homeassistant-volkswagencarnet/issues",
+  "loggers": ["volkswagencarnet"],
   "requirements": [],
   "version": "v0.0.0"
 }
